--- a/Petistaan/src/main/resources/application.yml
+++ b/Petistaan/src/main/resources/application.yml
@@ -9,3 +9,14 @@ logging:
 spring:
   application:
     name: Petistaan
+  datasource:
+    password: ${MYSQL_PASSWORD}
+    url: jdbc:mysql://localhost:3306/petistaan
+    username: ${MYSQL_USERNAME}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  sql:
+    init:
+      mode: never
